@@ -1,6 +1,8 @@
 Changes for the Labyrinth-Test-Harness
 ======================================
 
+        - Windows cannot delete directories/files while processing.
+
 1.04	2014-11-09
         - missing prequisite Class::Accessor::Fast in META.yml.
 
